<resources>
    <!-- Main Activity -->
    <string name="app_name">Uguu Uploader</string>

    <!-- Login Activity -->
    <string name="edtLoginUsername">Username</string>
    <string name="edtLoginPassword">Password</string>
    <string name="btnLogin">Log in</string>
    <string name="tvLoginSignin">Sign in</string>
    <string name="title_activity_main">Uguu Uploader</string>

    <!-- Upload Activity -->
    <string name="uploadTitle">Upload</string>
    <string name="edtUploadPath">Path</string>
    <string name="chkUploadRanFilename">Random Filename</string>
    <string name="edtUploadCustomFilename">Custom Filename (Optional)</string>
    <string name="btnUploadUButton">Upload!</string>
    <string name="btnUploadFile">File</string>

    <!-- Sign in Activity -->
    <string name="signinTitle">Sign in</string>
    <string name="edtSignInUsername">Username</string>
    <string name="edtSignInPassword">Password</string>
    <string name="edtSignInRepeat">Repeat Password</string>
    <string name="btnSignIn">Sign In</string>
    
    <!-- Upload row Layout -->
    <string name="btnUploadRowDelete">Delete</string>

    <!-- upload notification -->
    <string name="uploadChannelID">uploadchan</string>
    <string name="uploadChannelName">upload chan</string>
    <string name="uploadChannelDescription">receive notification whether upload succeed or not</string>
</resources>
